--- a/style.css
+++ b/style.css
@@ -26,3 +26,8 @@ th{
     background-color: rgb(126, 126, 126);
     padding: 1rem;
 }
+@media screen and (max-width: 640px) {
+    table {
+      width: 90%;
+    }
+  }
